<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Guider GPS</string>
    <string name="app_main_bottom_health">Health</string>
    <string name="app_main_bottom_location">Location</string>
    <string name="app_main_bottom_medicine">Care</string>
    <string name="app_main_bottom_mine">Mine</string>
    <string name="app_main_left_msg_device_status_online">Online</string>
    <string name="app_main_left_msg_device_status_offline">Offline</string>
    <string name="app_main_health_today">Today</string>
    <string name="app_main_health_yesterday">Yesterday</string>
    <string name="app_main_health_before_yesterday">2 Days ago</string>
    <string name="app_main_health_target_step">Target %d steps</string>
    <string name="app_main_health_step">Step</string>
    <string name="app_main_health_blood_oxygen">Blood Oxygen</string>
    <string name="app_main_health_blood_oxygen_title">Oxygen saturation</string>
    <string name="app_main_health_blood_sugar">Blood Glucose</string>
    <string name="app_main_health_blood_pressure">Blood Pressure</string>
    <string name="app_main_health_heart_rate">Heart rate</string>
    <string name="app_main_health_body_temp">Body temperature</string>
    <string name="app_main_health_sleep">Sleep</string>
    <string name="app_main_health_sleep_minute">Minutes</string>
    <string name="app_main_health_sport">Sport</string>
    <string name="app_main_health_high_pressure">High pressure</string>
    <string name="app_main_health_low_pressure">Low pressure</string>
    <string name="app_main_medicine_low_side">On the low side</string>
    <string name="app_main_health_mild">Mild</string>
    <string name="app_main_health_normal">Normal</string>
    <string name="app_main_health_error">Abnormal</string>
    <string name="app_main_health_sleep_deep">Deep sleep</string>
    <string name="app_main_health_sleep_shallow">Shallow sleep</string>
    <string name="app_main_health_sleep_awake">Awake</string>
    <string name="app_main_health_time_sleep">The amount of sleep: %s-%s</string>
    <string name="app_main_medicine_high_side">On the high side</string>
    <string name="app_main_health_query">Query</string>
    <string name="app_main_bind_device">Bound to %s bracelet</string>
    <string name="app_main_remove_family_title">Remove the family</string>
    <string name="app_main_remove_family">Are you sure you want to remove the family relationship of %s</string>
    <string name="app_main_unbind_device">Are you sure you want to unbind %s bracelet?</string>
    <string name="app_main_delete_fence">Are you sure you want to delete this electronic fence area?</string>
    <string name="app_main_unbind_success">unbind success</string>
    <string name="app_exit_hint">Press the back key again to exit</string>
    <string name="app_main_map_location_information">Location information</string>
    <string name="app_main_map_track_events">Track event</string>
    <string name="app_main_map_electronic_fence">Electronic fence</string>
    <string name="app_main_map_proactively_addressing">Proactively addressing</string>
    <string name="app_main_map_positioning_frequency_setting">Positioning frequency setting</string>
    <string name="app_main_map_history_record">History record</string>
    <string name="app_main_map_history">History</string>
    <string name="app_main_map_send_instructions">Send instructions</string>
    <string name="app_main_map_address_history">Addressing the history</string>
    <string name="app_main_map_addressing_success">Addressing  success</string>
    <string name="app_main_map_addressing_fail">Addressing  fail</string>
    <string name="app_main_send_success">Send  success</string>
    <string name="app_main_send_fail">Send Fail</string>
    <string name="app_main_location_send_fail">The send failed and the device may be offline</string>
    <string name="app_main_map_location_permission_hint">Using the map service requires location permissions</string>
    <string name="app_location_permission">Location</string>
    <string name="app_camera_permission">Camera</string>
    <string name="app_main_map_permission_error">Location acquisition failed and the location service could not be implemented</string>
    <string name="illegal_coordinate_value" tools:ignore="MissingTranslation">Illegal coordinate value</string>
    <string name="app_main_medicine_suggest_hint">%s Suggest:</string>
    <string name="app_main_medicine_manual_measuring">Manual measuring</string>
    <string name="app_main_medicine_chart_title">Trend chart of the last seven times</string>
    <string name="app_main_medicine_suggest_sugar_high">It is suggested to eat less and more meals, pay attention to diet control, strengthen exercise and take medicine on time!If blood glucose monitoring continues to be high, it is recommended to seek medical attention in time!</string>
    <string name="app_main_medicine_suggest_sugar_low">Take some with you, such as cookies, candy bars, chocolate or sugary drinks and water. Replenish sugar and water in time and strengthen exercise</string>
    <string name="app_main_medicine_suggest_sugar_normal">Recommended to keep up!Strengthen exercise, maintain good living habits, maintain daily happy mood.</string>
    <string name="app_main_medicine_suggest_blood_pre_high">It is suggested to strengthen exercise, pay attention to low salt and fat diet, moderate diet, quit smoking and alcohol.</string>
    <string name="app_main_medicine_suggest_blood_pre_low">Active exercise is recommended to improve physical fitness and cardiopulmonary function.</string>
    <string name="app_main_medicine_suggest_blood_pre_normal">Recommended to keep up!Strengthen exercise, maintain good living habits, maintain daily happy mood.</string>
    <string name="app_main_medicine_suggest_hypertension">It is recommended to strengthen physical exercise and monitor blood pressure regularly. If continuous monitoring is high, please see a doctor in time and take medicine as prescribed by the doctor.</string>
    <string name="app_main_medicine_suggest_blood_oxygen_low">Eat more blood-enriching foods, such as red dates, longan meat, peanuts, red beans, red rice porridge and so on.</string>
    <string name="app_main_medicine_suggest_blood_oxygen_normal">Please keep it up!Maintain good living habits, maintain daily happy mood.</string>
    <string name="app_main_medicine_suggest_heart_rate_abnormal">It is recommended to exercise actively, improve physical fitness and cardiopulmonary function</string>
    <string name="app_main_medicine_suggest_heart_rate_normal">Please keep up! Maintain good living habits, maintain daily happy mood.</string>
    <string name="app_health_warn_temp_low">Please take more exercise, keep warm and strengthen nutrition</string>
    <string name="app_health_warn_temp_normal">Maintain a healthy diet, exercise, and sleep routine</string>
    <string name="app_health_warn_temp_low_fever">Please do a good physical cooling, drink more water, eat more fruits and vegetables, or according to the situation medical examination and treatment</string>
    <string name="app_health_warn_temp_medium_fever">Please do a good job of physical cooling, drink more water, pay attention to the change of body temperature, timely medical examination and treatment according to the situation</string>
    <string name="app_health_warn_temp_highly_fever">Please pay attention to the change of body temperature and seek medical examination and treatment in time</string>
    <string name="app_health_warn_temp_hyperthermia">Life may be dangerous, please seek medical treatment as soon as possible</string>
    <string name="app_main_medicine_doctors_consultation">Doctors consultation</string>
    <string name="app_doctor_answer_edit_hint">Ask the health doctor</string>
    <string name="app_doctor_answer_picture">To upload pictures</string>
    <string name="app_doctor_answer_camera">Camera</string>
    <string name="app_doctor_answer_expression">Expression</string>
    <string name="app_main_mine_set">Setting</string>
    <string name="app_main_mine_sport_target">Sport target</string>
    <string name="app_main_mine_heart_rate_set">Heart rate alarm threshold setting</string>
    <string name="app_main_mine_temp_set">Body temperature alarm threshold setting</string>
    <string name="app_main_mine_remove_bind">Remove the binding</string>
    <string name="app_main_mine_change_password">Change password</string>
    <string name="app_main_delete_electronic_fence_area">Remove the electronic fence area</string>
    <string name="app_main_mine_version_check">Version checking</string>
    <string name="app_main_mine_log_out">Log out</string>
    <string name="app_main_left_device_list">The equipment list</string>
    <string name="app_main_left_add_device">Add your family</string>
    <string name="app_add_device">Add device</string>
    <string name="app_add_device_scan_code">Scan code</string>
    <string name="app_add_device_input">Input</string>
    <string name="app_add_device_scan_hint">Please scan the device code</string>
    <string name="app_add_device_scan_hint2">Make sure the device is on and the SIM card is inserted</string>
    <string name="app_add_device_input_title">Please enter the device code</string>
    <string name="app_add_device_nickname_input_title">Please enter a user nickname</string>
    <string name="app_add_user_header_title">Please upload user avatar</string>
    <string name="app_add_device_input_hint">Equipment IMEI code</string>
    <string name="app_next_step">The next step</string>
    <string name="app_msg">Message</string>
    <string name="app_msg_health_notify">Health</string>
    <string name="app_msg_care_info">Care</string>
    <string name="app_msg_system_info">System</string>
    <string name="app_msg_item_title">%smeasure</string>
    <string name="app_msg_item_measure_time">Measure time:  </string>
    <string name="app_msg_item_suggest">Suggest：        </string>
    <string name="app_msg_item_collect_compressive">Collect compressive:  </string>
    <string name="app_msg_item_shu_zhang_pressure">Shu zhang pressure</string>
    <string name="app_msg_item_health_suggest">Health advice</string>
    <string name="app_watch_detail">Watch Detail</string>
    <string name="app_navigation">Navigation</string>
    <string name="app_start_time">Start time</string>
    <string name="app_end_time">End time</string>
    <string name="app_time_interval">The time interval</string>
    <string name="app_history_list">History List</string>
    <string name="app_phone_number">Phone Number</string>
    <string name="app_bind_phone_number">Bind Phone Number</string>
    <string name="app_immediately_binding">Immediately binding</string>
    <string name="app_step_number">Step Number</string>
    <string name="app_please_fill_in">Please fill in</string>
    <string name="app_step_input_hint">Please fill in the target number of steps</string>
    <string name="app_phone_input_hint">Please fill in the target number of Phone Number</string>
    <string name="app_person_info_detail_address">Detailed address</string>
    <string name="app_person_info_select_sex">Select sex</string>
    <string name="app_person_info_man">Man</string>
    <string name="app_person_info_woman">Woman</string>
    <string name="app_person_info_select_area">Select area</string>
    <string name="app_person_info_district_information">Regional information</string>
    <string name="app_person_info_street_information">Street number information</string>
    <string name="app_device_nickName">User nickname</string>
    <string name="app_general_pattern">General pattern</string>
    <string name="app_search_pattern">Search pattern</string>
    <string name="app_time_interval_30_minutes">Interval 30 minutes</string>
    <string name="app_time_interval_five_minutes">Interval 5 minutes</string>
</resources>