<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/countryLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/countryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/app_person_info_select_area"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countryTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_19"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorCCCCCC"
            android:textSize="@dimen/sp_13"
            android:text="@string/app_person_info_district_information"
            app:layout_constraintStart_toEndOf="@id/countryTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/line_grey"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="67dp"
        app:layout_constraintTop_toBottomOf="@id/countryLayout">

        <TextView
            android:id="@+id/detailAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/app_person_info_detail_address"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/detailAddressEdit"
            android:background="@color/white"
            android:gravity="start"
            android:hint="@string/app_person_info_street_information"
            android:minHeight="67dp"
            android:paddingStart="@dimen/dp_19"
            android:paddingTop="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_16"
            android:textColor="@color/color333333"
            android:textColorHint="@color/colorCCCCCC"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailAddressTitle"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>