<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/inputHintTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/app_add_device_input_title"
        android:textColor="@color/color333333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:hint="@string/app_add_device_input_hint"
        android:singleLine="true"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color333333"
        android:textColorHint="@color/colorCCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputHintTv" />

    <ImageView
        android:id="@+id/deleteEdit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dp_26"
        android:src="@drawable/icon_grey_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/inputEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputEdit" />

    <View
        android:id="@+id/editLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorDDDDDD"
        app:layout_constraintTop_toBottomOf="@id/inputEdit" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deviceNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/editLine">

        <TextView
            android:id="@+id/deviceNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:text="@string/app_add_device_nickname_input_title"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/deviceNameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@color/white"
            android:hint="@string/app_device_nickName"
            android:minHeight="@dimen/dp_28"
            android:textColor="@color/color333333"
            android:textColorHint="@color/color999999"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceNameTitle" />

        <View
            android:id="@+id/deviceNameLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_26"
            android:background="@color/colorEEEEEE"
            app:layout_constraintTop_toBottomOf="@id/deviceNameEdit" />

        <ImageView
            android:id="@+id/deviceNameDelete"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_20"
            android:src="@drawable/icon_grey_delete"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/deviceNameEdit"
            app:layout_constraintTop_toTopOf="@id/deviceNameEdit" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_84"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/deviceNameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:text="@string/app_add_user_header_title"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.guider.baselib.widget.CircleImageView
            android:id="@+id/headerIv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/dp_27"
            android:src="@drawable/icon_default_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/headerLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_marginEnd="@dimen/dp_26"
            android:background="@color/colorDDDDDD"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/enterTv"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_round_home_msg_21"
        android:gravity="center"
        android:text="@string/app_next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@id/headerLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/app_add_device_scan_hint2"
        android:textColor="@color/color999999"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterTv" />
</androidx.constraintlayout.widget.ConstraintLayout>