<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/locationPositionLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_9"
    android:visibility="gone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchPersonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_12"
        android:background="@drawable/select_location_position_search_person_background"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/searchPersonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_search_pattern"
            android:textColor="@drawable/select_location_position_title_text"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchPersonContentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_1"
            android:text="@string/app_time_interval_five_minutes"
            android:textColor="@drawable/select_location_position_content_text"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchPersonTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/normalLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/select_location_position_normal_background"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_4"
        app:layout_constraintEnd_toStartOf="@id/searchPersonLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/normalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_general_pattern"
            android:textColor="@drawable/select_location_position_title_text"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/normalContentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_1"
            android:text="@string/app_time_interval_30_minutes"
            android:textColor="@drawable/select_location_position_content_text"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/normalTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/positionHistoryLayout"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/circle_f18937_5_bg"
        app:layout_constraintEnd_toStartOf="@id/normalLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/historyIv"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/icon_location_position_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/historyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/app_main_map_history"
            android:textColor="@color/colorF18937"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/historyIv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>