<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/app_person_info_select_sex"
            android:textColor="@color/color333333"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sexConfirmIv"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginEnd="@dimen/dp_1"
            android:src="@drawable/icon_orange_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/line_grey"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/manTv"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/app_person_info_man"
            android:textColor="@color/selector_sex_text_dialog"
            android:textSize="@dimen/sp_15"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/line_grey"
            app:layout_constraintTop_toBottomOf="@id/manTv" />

        <TextView
            android:id="@+id/girlTv"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/app_person_info_woman"
            android:textColor="@color/selector_sex_text_dialog"
            android:textSize="@dimen/sp_15"
            app:layout_constraintTop_toBottomOf="@id/line2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>