<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp"
        android:id="@+id/codeLayout"
        >
        <ImageView
            android:layout_width="@dimen/dp_238"
            android:layout_height="@dimen/dp_278"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/bg_scan_code_ring"
            />
        <ImageView
            android:layout_width="106dp"
            android:layout_height="106dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/codeIv"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/codeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        android:text="@string/app_add_device_scan_hint"
        android:textColor="@color/color333333"
        android:textSize="@dimen/sp_13"
        android:id="@+id/codeHintTv"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintTop_toBottomOf="@id/codeHintTv"
        android:layout_marginTop="21dp"
        android:background="@drawable/bg_round_home_msg_21"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="23dp"
        android:gravity="center"
        android:text="@string/app_add_device_scan_code"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:id="@+id/scanCodeTv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scanCodeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_add_device_scan_hint2"
        android:textColor="@color/color999999"
        android:textSize="@dimen/sp_13"
        android:layout_marginTop="9dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>